improved messages, and styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ body {
   position: absolute;
   top: 0;
   border-radius: 100%;
-  background-color: #ffffff;
+  background-color: #f9c3c3b6;
   background-repeat: no-repeat;
   background-size: 100% auto;
   -webkit-animation-name: snow-drop;
